--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -53,3 +53,36 @@ body{
   }
 
 }
+.chat-hora{
+  font-size: 12px;
+}
+.chat-cliente{
+  background-color: #eee;
+  color: #000;
+  padding: 5px;
+  margin: 2px;
+  font-size: 0.8em;
+  padding: 5px 10px;
+  border: 2px solid darkgray;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+}
+.chat-ac{
+  font-size: 0.8em;
+  padding: 5px 10px;
+  border: 2px solid darkgray;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  margin: 2px;
+}
+.chat-mensaje{
+
+}
