--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -92,29 +92,58 @@ body {
   -moz-box-shadow: 0px 0px 5px black;
   box-shadow: 0px 0px 5px black;
   margin: 5px;
-  min-height: 250px;
   color: white;
   position: relative;
+  height: 300px;
+  overflow-y: auto;
 }
-/* line 34, ../sass/screen.scss */
+/* line 36, ../sass/screen.scss */
 .chat-container button {
-  position: absolute;
-  bottom: 16px;
   right: 8px;
   border: 0px solid;
-  width: 10px;
-  height: 10px;
   background-color: transparent;
   color: black;
 }
-/* line 45, ../sass/screen.scss */
-.chat-container div {
-  min-height: 220px;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-/* line 50, ../sass/screen.scss */
+/* line 52, ../sass/screen.scss */
 .chat-container input {
   color: black;
   border: 0px solid;
+  margin: 5px;
+  width: 85%;
+}
+
+/* line 60, ../sass/screen.scss */
+.chat-hora {
+  font-size: 12px;
+}
+
+/* line 63, ../sass/screen.scss */
+.chat-cliente {
+  background-color: #eee;
+  color: #000;
+  padding: 5px;
+  margin: 2px;
+  font-size: 0.8em;
+  padding: 5px 10px;
+  border: 2px solid darkgray;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+}
+
+/* line 78, ../sass/screen.scss */
+.chat-ac {
+  font-size: 0.8em;
+  padding: 5px 10px;
+  border: 2px solid darkgray;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  margin: 2px;
 }
